--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -19,9 +19,10 @@ nav{
 @keyframes adjust-header{
     to{
         background: rgba(0, 0, 0, .3);
-        font-size: 12px;
+        font-size: 15px;
         height: 32px;
         border-radius: 0;
+        font-weight: 400;
     }
 }
 
@@ -29,7 +30,7 @@ nav{
 @media (max-width: 425px) {
     nav{
         gap: 1rem;
-        font-size: 13px;
+        font-size: 16px;
         font-weight: 400;
     }
   }
