--- a/src/Components/Drivers/DriverDetail/DriverDetail.css
+++ b/src/Components/Drivers/DriverDetail/DriverDetail.css
@@ -12,6 +12,7 @@
     flex-direction: column;
     justify-content: center; 
     align-items: center; 
-    height: 100vh;
-    width: 100vh;
+    height: 100%;
+    width: 100%;
+    margin-top: 25%;
 }
