--- a/src/Components/Drivers/DriverDetail/DriverDetail.css
+++ b/src/Components/Drivers/DriverDetail/DriverDetail.css
@@ -7,12 +7,12 @@
     
 }
 
-.driver-map-container{
+.driver-map{
     display: flex;
     flex-direction: column;
     justify-content: center; 
     align-items: center; 
     height: 100%;
     width: 100%;
-    margin-top: 25%;
+    margin-top: 20vh;
 }
