--- a/src/Components/Races/AllRaces.css
+++ b/src/Components/Races/AllRaces.css
@@ -4,5 +4,7 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     height: 100%;
+    width: 100%;
     gap: 10px;
+    padding: 0px 20px;
 }
