--- a/src/Pages/Meeting/Meetings.css
+++ b/src/Pages/Meeting/Meetings.css
@@ -3,14 +3,20 @@
     grid-template-columns: 1fr 1fr; 
     height: 100vh; 
     justify-content: space-around;
-   
   }
   
   .left, .right {
     display: flex;
     align-items: center;
-    justify-content: center;
     height: 100%;
   }
   
-  
+.right {
+  flex-direction: column;
+  justify-content: start;
+  margin-top: 26%;
+}
+
+.left{
+  justify-content: center;
+}
