--- a/src/Components/Drivers/DriverCard.css
+++ b/src/Components/Drivers/DriverCard.css
@@ -8,8 +8,16 @@
 
 .card:hover .number,
 .parent:active .number {
-    color: red; /* Cambia el color cuando el padre tiene hover */
-    transform: scale(1.2); /* Efecto de escala opcional */
+    color: red; 
+    transform: scale(1.3); 
+    transition: color 0.3s ease, transform 0.3s ease;
+}
+
+.card:hover .team-card,
+.parent:active .team-card {
+    color: rgb(0, 0, 0); 
+    transform: scale(1.1); 
+    transform-origin: left;
     transition: color 0.3s ease, transform 0.3s ease;
 }
 
