--- a/src/Components/Races/AllRaces.css
+++ b/src/Components/Races/AllRaces.css
@@ -1,10 +1,18 @@
 .all-races{
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
     justify-content: space-evenly;
-    height: 100%;
+    /* height: 100%; */
     width: 100%;
     gap: 10px;
     padding: 0px 20px;
+    height: 100vh;        /* Altura total de la pantalla */
+    overflow-y: auto;     /* Scroll solo cuando se necesite */
+    overflow-x: hidden;   
+    direction: rtl;  
+}
+
+.filters{
+    direction: ltr;
+    margin-top: 20px;
 }
