--- a/src/Components/Races/WeatherRace/WeatherComponent.css
+++ b/src/Components/Races/WeatherRace/WeatherComponent.css
@@ -7,16 +7,11 @@
     font-family: 'Courier New', Courier, monospace;
     font-size: small;
     width: 25vh;
-    background-color: rgba(0, 255, 255, 0.169);
+    /* background-color: #005B4E ; */
+    /* rgba(0, 255, 255, 0.169);  */
     margin-top: 10px;
 }
 
-h4{
-    font-family: 'Courier New', Courier, monospace;
-    
-    width: 100%;
-    text-align: center;
-}
 
 .data-weather{
     display: flex;
